--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 body{ 
     margin: 0;
-    padding: 0;  
-    width: 100%;                                           
+    padding: 0;                                             
     background-color: white;	    
  }
 
  #left-column{
     width: 60%;
     float: left;
-    background-color: aqua;
- }
+    background-color: blueviolet;
+}
 
  #right-column img{
     width: 230px;
